# backend/docs/openapi.yaml
@@ -155,6 +155,46 @@ paths:
                   $ref: '#/paths/~1users/get/responses/default/content/application~1json/examples/unexpected_error'
                 overload_error:
                   $ref: '#/paths/~1users/get/responses/default/content/application~1json/examples/overload_error'
+    post:
+      summary: Create a new project
+      operationId: createProject
+      tags:
+        - Project
+      requestBody:
+        description: Project object that needs to be added to the store
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                project:
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                    project_name:
+                      type: string
+                    description:
+                      type: string
+      responses:
+        '201':
+          description: Project created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/project'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
+              examples:
+                unexpected_error:
+                  $ref: '#/paths/~1users/get/responses/default/content/application~1json/examples/unexpected_error'
+                overload_error:
+                  $ref: '#/paths/~1users/get/responses/default/content/application~1json/examples/overload_error'
   '/projects/{id}':
     get:
       summary: Get project by ID
@@ -186,18 +226,44 @@ paths:
                   $ref: '#/paths/~1users/get/responses/default/content/application~1json/examples/unexpected_error'
                 overload_error:
                   $ref: '#/paths/~1users/get/responses/default/content/application~1json/examples/overload_error'
+    patch:
+      summary: Update project by ID
+      operationId: updateProjectById
+      tags:
+        - Project
+      requestBody:
+        description: Project object that needs to be updated
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                project:
+                  $ref: '#/paths/~1projects/post/requestBody/content/application~1json/schema/properties/project'
+      responses:
+        '200':
+          description: Project updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/project'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
+              examples:
+                unexpected_error:
+                  $ref: '#/paths/~1users/get/responses/default/content/application~1json/examples/unexpected_error'
+                overload_error:
+                  $ref: '#/paths/~1users/get/responses/default/content/application~1json/examples/overload_error'
     delete:
       summary: Delete project by ID
       operationId: deleteProjectById
       tags:
         - Project
-      parameters:
-        - name: id
-          in: path
-          description: ID of project to delete
-          required: true
-          schema:
-            type: string
       responses:
         '204':
           description: Project deleted successfully
@@ -262,6 +328,8 @@ components:
         id:
           type: string
         project_name:
+          type: string
+        description:
           type: string
     error:
       type: object
